[gd_scene load_steps=4 format=3 uid="uid://drv111ylkf284"]

[ext_resource type="Script" path="res://addons/homero_framework/src/core/editor/dialogue/new_graph_node_popup.gd" id="1_4ea30"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xjxtm"]
bg_color = Color(0.0980392, 0.258824, 0.4, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m0d8m"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.0980392, 0.258824, 0.4, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="NewGraphNodePopup" type="PanelContainer"]
offset_right = 142.0
offset_bottom = 56.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xjxtm")
script = ExtResource("1_4ea30")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="DropdownName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "New Node"

[node name="ButtonsOptionsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="StartingStepButton" type="Button" parent="VBoxContainer/ButtonsOptionsContainer"]
layout_mode = 2
text = "Starting Step"

[node name="DialogueStepButton" type="Button" parent="VBoxContainer/ButtonsOptionsContainer"]
layout_mode = 2
text = "Step"

[node name="DialogueOptionButton" type="Button" parent="VBoxContainer/ButtonsOptionsContainer"]
layout_mode = 2
text = "Option"

[node name="DialogueEventButton" type="Button" parent="VBoxContainer/ButtonsOptionsContainer"]
layout_mode = 2
text = "Event"

[node name="DialogueSpeakerButton" type="Button" parent="VBoxContainer/ButtonsOptionsContainer"]
layout_mode = 2
text = "Speaker"

[node name="DialogueConditionalButton" type="Button" parent="VBoxContainer/ButtonsOptionsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Conditional"

[node name="ConditionalsListDropdown" type="PanelContainer" parent="VBoxContainer/ButtonsOptionsContainer/DialogueConditionalButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_top = -32.0
offset_right = 142.0
offset_bottom = 36.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_m0d8m")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ButtonsOptionsContainer/DialogueConditionalButton/ConditionalsListDropdown"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer/ButtonsOptionsContainer/DialogueConditionalButton/ConditionalsListDropdown/VBoxContainer"]
layout_mode = 2
text = "New condition"

[node name="ConditionalsButtonsContainer" type="VBoxContainer" parent="VBoxContainer/ButtonsOptionsContainer/DialogueConditionalButton/ConditionalsListDropdown/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="Button" type="Button" parent="VBoxContainer/ButtonsOptionsContainer/DialogueConditionalButton/ConditionalsListDropdown/VBoxContainer/ConditionalsButtonsContainer"]
layout_mode = 2
text = "Example Button"

[connection signal="pressed" from="VBoxContainer/ButtonsOptionsContainer/StartingStepButton" to="." method="_on_starting_step_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsOptionsContainer/DialogueStepButton" to="." method="_on_dialogue_step_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsOptionsContainer/DialogueOptionButton" to="." method="_on_dialogue_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsOptionsContainer/DialogueEventButton" to="." method="_on_dialogue_event_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsOptionsContainer/DialogueSpeakerButton" to="." method="_on_dialogue_speaker_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/ButtonsOptionsContainer/DialogueConditionalButton" to="." method="_on_dialogue_conditional_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/ButtonsOptionsContainer/DialogueConditionalButton" to="." method="_on_dialogue_conditional_button_mouse_exited"]
